--- a/client/src/components/Top/Top.module.css
+++ b/client/src/components/Top/Top.module.css
@@ -9,12 +9,11 @@
 }
 
 .cardsf {
-  margin-top: 60px;
+  margin-top: 40px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   flex-wrap: wrap;
-  margin-left: -14%;
-  justify-content: center;
-  align-items: flex-start;
   gap: 20px;
+  justify-content: space-evenly;
 }
